@@ -17,7 +17,7 @@ Version 2.20
   16713, 16714, 16731, 16739, 16740, 16743, 16754, 16758, 16759, 16760,
   16770, 16786, 16789, 16791, 16799, 16800, 16815, 16823, 16824, 16831,
   16838, 16854, 16876, 16877, 16885, 16888, 16890, 16912, 16916, 16922,
-  16932.
+  16927, 16932.
 
 * The minimum Linux kernel version that this version of the GNU C Library
   can be used with is 2.6.32.
